monte de coisas

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"model_directory": "default", "trained_model_directory": "default\\default\\model_20180526-201912", "coisa": "coisinha"}
+{"model_directory": "default", "trained_model_directory": "default\\default\\model_20180528-223047"}
