--- a/config-spacy.json
+++ b/config-spacy.json
@@ -1,12 +1,4 @@
 {
   "language": "pt",
-  "pipeline": [
-    "nlp_spacy",
-    "tokenizer_spacy",
-    "intent_featurizer_spacy",
-    "intent_entity_featurizer_regex",
-    "intent_classifier_sklearn",
-    "ner_crf",
-    "ner_synonyms"
-  ]
+  "pipeline": "spacy_sklearn"
 }
