--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"model_directory": "default", "trained_model_directory": "default\\default\\model_20180529-133451", "token": "554527307:AAEXjHxubpImT6LCHRLP2D-CKZQP4eY_EOg"}
+{"token": "554527307:AAEXjHxubpImT6LCHRLP2D-CKZQP4eY_EOg", "model_directory": "default", "trained_model_directory": "default/default/model_20180625-173429"}
